@@ -4,10 +4,10 @@
 #
 # 1997/10 -- dl
 #
-# $Id: str2c,v 1.2 1999/04/16 00:47:40 stanton Exp $
+# $Id: str2c,v 1.2.36.1 2009/03/26 13:28:00 dgp Exp $
 #
 # restart with tclsh \
-exec tclsh8.0 "$0" "$@"
+exec tclsh "$0" ${1+"$@"}
 
 # Max string length
 # (some C compiler have a 2048 chars limits (so 2047 real chars with
